--- a/src/css/skeleton.sass
+++ b/src/css/skeleton.sass
@@ -14,7 +14,7 @@ body
   font-size: 1.5em
   line-height: 1.6
   font-weight: 400
-  font-family: monospace, "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-family: "Oswald", monospace, "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif
   color: #222
 
 /* Typography
