--- a/src/index.pug
+++ b/src/index.pug
@@ -2,10 +2,13 @@ doctype html
 html
 	head
 		title ClickerClacker
+		link(href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet")
 		style
 			include build/screen.css
+		link
 	body#app
-		button#btn click
+		h1 Clacker Clicker
+		include media/key.svg
 		p#clickCounter
 		p#userCounter
 		
