--- a/src/css/screen.sass
+++ b/src/css/screen.sass
@@ -6,5 +6,11 @@ body
 	justify-content: center
 	flex-direction: column
 	min-height: 100vh
+	user-select: none
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0)
+#userCounter
+	font-size: 40px
 #key
-	width: 70vw;
+	width: 70vmin;
+	user-select: none
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0)
