--- a/src/css/screen.sass
+++ b/src/css/screen.sass
@@ -1,16 +1,20 @@
 @import 'skeleton'
+*
+	box-sizing: border-box
 body
 	margin: 0
-	display: flex
-	align-items: center
-	justify-content: center
-	flex-direction: column
 	min-height: 100vh
 	user-select: none
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0)
+#header
+	text-align: center
 #userCounter
 	font-size: 40px
+	margin: 0
+#app
+	display: flex
+	align-items: center
+	justify-content: center
+	min-height: calc(100vh - 144px)
 #key
 	width: 70vmin;
-	user-select: none
-	-webkit-tap-highlight-color: rgba(255, 255, 255, 0)
