--- a/src/index.pug
+++ b/src/index.pug
@@ -15,7 +15,7 @@ html
 		#app
 			include media/key.svg
 		
-		script(src="http://192.168.178.59:8080/socket.io/socket.io.js")
-		script(src="https://unpkg.com/vue")
+		script
+			include js/socket.io.js
 		script
 			include js/app.js
