--- a/src/css/screen.sass
+++ b/src/css/screen.sass
@@ -6,6 +6,7 @@ body
 	min-height: 100vh
 	user-select: none
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0)
+	background: #f2f2f2
 #app
 	display: flex
 	flex-direction: column
@@ -15,6 +16,7 @@ body
 	justify-content: space-between
 #header
 	text-align: center
+	color: #1e1e1e
 	h1
 		font-size: calc(2rem + 4vw)
 		margin: 0
