--- a/src/css/screen.sass
+++ b/src/css/screen.sass
@@ -28,3 +28,12 @@ body
 	width: 70vmin;
 #key:active
 	transform: translateY(15px)
+#store
+	width: 100%
+#store div
+	display: flex
+	align-items: space-between
+	justify-content: center
+	cursor: pointer
+#store div pointer
+	margin: 0
