--- a/src/index.pug
+++ b/src/index.pug
@@ -16,6 +16,13 @@ html
 				p#userCounter
 			#center
 				include media/key.svg
+			#store
+				#secretary
+					p.name Sekretärin
+					p.count 0
+				#worker
+					p.name Arbeiter
+					p.count 0
 			#footer
 				p &copy 2017 Malte Janßen
 		script
