--- a/src/css/screen.sass
+++ b/src/css/screen.sass
@@ -1,20 +1,29 @@
 *
 	box-sizing: border-box
 body
+	display: flex
+	justify-content: space-between
+	padding: 10px
+
 	font-family: "Oswald", sans-serif
 	margin: 0
 	min-height: 100vh
 	user-select: none
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0)
-	background: #f2f2f2
-#app
+	flex-wrap: wrap
+	color: #1e1e1e
+#main
 	display: flex
 	flex-direction: column
-	width: 100vw
-	height: 100vh
-	align-items: center
 	justify-content: space-between
+	align-items: center
+	flex-grow: 1
+#footer p
+	margin: 0
+#side
+	flex-grow: 1
 #header
+	width: 100%
 	text-align: center
 	color: #1e1e1e
 	h1
@@ -23,17 +32,19 @@ body
 #userCounter
 	font-size: 40px
 	margin: 0
-
+	
 #key
 	width: 70vmin;
 #key:active
 	transform: translateY(15px)
 #store
-	width: 100%
+	flex-grow: 1
+	min-width: 350px
 #store div
 	display: flex
-	align-items: space-between
-	justify-content: center
+	align-items: center
+	justify-content: space-between
 	cursor: pointer
-#store div pointer
-	margin: 0
+	padding: 5px
+	margin-bottom: 12px
+	border: 1px solid #2c2c2c
